--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,11 @@ body,
   background-color: #000000;
   @apply text-white;
 }
+
+h1 {
+  text-shadow: 4px 4px 10px #e6db43;
+}
+
+h2 {
+  text-shadow: 4px 4px 10px #8f4779;
+}
